new feature eda

--- a/Extraction.ipynb
+++ b/Extraction.ipynb
@@ -4013,12 +4013,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "7b444596-cce7-44c5-a6be-c4ebdebbf6b0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m df[\u001b[33m'\u001b[39m\u001b[33mdemocracy_score\u001b[39m\u001b[33m'\u001b[39m]=\u001b[43mdf\u001b[49m[\u001b[33m'\u001b[39m\u001b[33mdemocracy_score\u001b[39m\u001b[33m'\u001b[39m].apply(lambd)\n",
+      "\u001b[31mNameError\u001b[39m: name 'df' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "df['democracy_score']=df['democracy_score'].apply(lambd)"
+    "df.head"
    ]
   },
   {
